docs/grammar.bnf
/// A file contains a list of elements.
file ::= elements

elements ::= element*

element ::= class | function | field

/// A class is abstract if it declares an abstract function.
class ::= 'class' identifier inherits? '{' elements '}'

inherits ::= ':' type (',' type)*

/// A function is abstract if it doesn't declare a body.
function ::= 'constant'? 'function' identifier parameters '->' type (block_expression | ';')

/// A parameter list can be empty.
parameters ::= '(' (parameter (',' parameter)*)? ')'

/// A parameter has similar semantics to a field.
parameter ::= 'constant'? 'mutable'? identifier ':' type

/// A constant field cannot be mutable.
/// A constant field must be initialized by a constant expression.
field ::= ( 'let' | 'constant' ) 'mutable'? identifier ':' type initializer? ';'

initializer ::= '=' expression

/// A type is a constant expression that evaluates to a type.
/// A class without parameters can be used as a type.
/// A class with parameters must be called with all arguments.
type ::= expression

/// An expression is constant if it only references constant fields and functions.
/// An element evaluates to an reference to that field.
expression ::= element |
               literal_expression |
               path_expression |
               call_expression |
               parenthesized_expression |
               type_constructor |
               object_constructor |
               block_expression

literal_expression ::= integer

path_expression ::= (expression '::')? identifier

call_expression ::= expression arguments

arguments ::= '(' (expression (',' expression)*)? ')'

parenthesized_expression ::= '(' expression ')'

type_constructor ::= expression '::' '<' labeled_arguments '>'

object_constructor ::= expression '{' labeled_arguments '}'

labeled_arguments ::= (labeled_argument (',' labeled_argument)*)?

labeled_argument ::= identifier ':' expression

block_expression ::= '{' statement* expression? '}'

statement ::= expression ';'
